# MADNESS-legacy

./: .all-contributorsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  evaluate_speed.py  mkdocs.yml  pyproject.toml  setup.py  test.py  test_speed.py  train_flow.py  train_models.py  train_vae.py  trainer.py
.github/workflows/: pre-commit.yml  unit_test.yml
btksims/: pyproject.toml
btksims/btksims/: __init__.py  btksims_config.yaml  create_tf_datasets.py  sampling.py  simulate_test_dataset.py  train_val_sims.py  utils.py
data/cosmos8d/: train_deblender_history.npy  train_vae_history.npy
data/cosmos8d/deblender/val_loss/: weights_noisy_v4.ckpt.index
data/cosmos8d/deblender/val_mse/: weights.ckpt.index
data/cosmos8d/flow/val_loss/: weights.ckpt.index
data/cosmos8d/vae/val_loss/: weights.ckpt.index
data/cosmos8d/vae/val_mse/: weights.ckpt.index
docs/: about.md  citation.md  contributors.md  index.md  requirements.txt
docs/tutorial_notebooks/: config.ipynb  deblending.ipynb  training.ipynb
examples/: compare_results.py  compare_with_scarlet.py  evaluate_speed.py  run_madness.py  run_scarlet.py  train_flow.py  train_models.py  train_vae.py
maddeb/: Deblender.py  FlowVAEnet.py  __init__.py  batch_generator.py  boxplot.py  callbacks.py  dataset_generator.py  extraction.py  losses.py  maddeb_config.yaml  metrics.py  model.py  sampling.py  train.py  utils.py
maddeb/data/cosmos10d/: train_vae_history.npy
maddeb/data/cosmos10d/deblender/val_loss/: weights.ckpt.index
maddeb/data/cosmos10d/deblender/val_mse/: weights.ckpt.index
maddeb/data/cosmos10d/flow/val_loss/: weights.ckpt.index
maddeb/data/cosmos10d/vae/val_loss/: weights.ckpt.index
maddeb/data/cosmos10d/vae/val_mse/: weights.ckpt.index
maddeb/data/cosmos8d/: train_deblender_history.npy  train_vae_history.npy
maddeb/data/cosmos8d/deblender/val_loss/: weights.ckpt.index
maddeb/data/cosmos8d/deblender/val_loss/weights_noisy_v4.ckpt_temp_fe6e85a560754eafbdb67e2ad95f6a66/: part-00000-of-00001.index
maddeb/data/cosmos8d/deblender/val_mse/: weights.ckpt.index
maddeb/data/cosmos8d/flow/val_loss/: weights.ckpt.index
maddeb/data/cosmos8d/vae/val_loss/: weights.ckpt.index
maddeb/data/cosmos8d/vae/val_mse/: weights.ckpt.index
maddeb/tests/: test_deblender.py  test_extraction.py  test_training.py
notebooks/: VAE+FLOW.ipynb  additional_plots.ipynb  basic_tests.ipynb  catsim_snr_cut.ipynb  check_btk_rotation.ipynb  compare_color_results_high_density-Copy1.ipynb  compare_color_results_high_density.ipynb  compare_results.ipynb  compare_results_high_density.ipynb  compare_results_high_density_30kgal.ipynb  compare_results_low_density.ipynb  compare_results_low_desnsity.ipynb  compute_contamination.ipynb  deblending.ipynb  paper_plots.ipynb  run_SCARLET.ipynb  simulations.ipynb  test_simultaneous deblending.ipynb  test_simultaneous_deblending.ipynb  test_simultaneous_deblending_speed.ipynb  updated_run_scarlet.ipynb
scripts/: BatchGenerator.py  Deblender.py  FlowVAEnet.py  GalaxyPrior.py  extraction.py  metrics.py  model.py  utils.py
simulations/: cosmos_sims.py  create_tf_datasets.py  simulate_test_dataset.py  train_val_sims.py
