[tool.poetry]
name = "btksims"
version = "0.0.1"
description = "btk simulations with for training and testing MADNESS deblender"
authors = ["Biswajit Biswas <biswas@apc.in2p3.fr>"]

[tool.poetry.dependencies]
blending_toolkit = {git="https://github.com/b-biswas/BlendingToolKit", branch = "madness-branch"}
galsim = {version = "*"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
